<resources>
    <string name="app_name">Plan24</string>
    <string name="instruction">Add task which you want"\n"to do in next 24 hrs</string>
    <string name="FAB">Add task</string>
    <string name="popup_header"><u>Add Timer for task</u></string>
    <string name="HH">HH</string>
    <string name="time_separator">:</string>
    <string name="MM">MM</string>
    <string name="SS">SS</string>
    <string name="task_name">Task Name</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="Hours">Hours</string>
    <string name="Minutes">Minutes</string>
    <string name="Seconds">Seconds</string>
    <string name="Delete_all"><u>Delete All</u></string>
    <string name="countdown_text">TIME TO PLAN</string>
    <string name="time_countdown">24:00:00</string>

</resources>